--- a/roles/translator/Cargo.toml
+++ b/roles/translator/Cargo.toml
@@ -34,8 +34,7 @@ error_handling = { version = "0.1", path = "../../utils/error-handling" }
 key-utils = { version = "^1.0.0", path = "../../utils/key-utils" }
 tokio-util = { version = "*", features = ["codec"] }
 async-compat = "0.2.1"
-
-
+jsonrpc = { version = "^0.16.0", path = "../jd-server/vendored/rust-jsonrpc"}
 
 [dev-dependencies]
 rand = "0.8.4"
